objects/Estimate__c.object
<CustomObject>
    <description>Object used to capture the required services and high level cost of the project.</description>
    <fields>
        <fullName>Actual_System_Size_BOS__c</fullName>
        <formula>Design__r.Actual_System_Size_BOS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual System Size (BOS)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_System_Size_PV__c</fullName>
        <formula>Design__r.Actual_System_Size_PV__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual System Size (PV)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Time_Spent_HR__c</fullName>
        <label>Actual Time Spent (HR)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BOS_W__c</fullName>
        <formula>Opportunity__r.BOS_s_w__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BOS $/W</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BOS__c</fullName>
        <formula>BOS_wp__c *  System_Size_MWp__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BOS</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BOS_wp__c</fullName>
        <inlineHelpText>Represents total BOS costs, including Electrical and O&amp;M Costs (not auto-calculated from Electrical and O&amp;M costs)</inlineHelpText>
        <label>BOS ($/wp)</label>
        <precision>7</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Build_Date__c</fullName>
        <label>Build Date</label>
        <picklist>
            <picklistValues>
                <fullName>Q1 2009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q2 2009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q3 2009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q4 2009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q1 2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q2 2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q3 2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q4 2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q1 2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q2 2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q3 2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q4 2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q1 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q2 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q3 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q4 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q1 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q2 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q3 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q4 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q1 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q2 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q3 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q4 2014</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Build_Quarter__c</fullName>
        <label>Build Quarter</label>
        <picklist>
            <picklistValues>
                <fullName>Q1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Build_Year__c</fullName>
        <label>Build Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <formula>TEXT(Opportunity__r.Business_Unit__c)</formula>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Commercial_Operation_Date__c</fullName>
        <label>Commercial Operation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Components_wp__c</fullName>
        <label>Components ($/wp)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost_Estimate_Due__c</fullName>
        <formula>PSR__r.Cost_Estimate_Due__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost Estimate Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DC_AC_Ratio__c</fullName>
        <label>DC/AC Ratio</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_Captured__c</fullName>
        <label>Data Captured</label>
        <picklist>
            <picklistValues>
                <fullName>Excess estimates (MWp)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Estimate Data (MWp)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Potentially Awarded (MWp)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Design_Message__c</fullName>
        <formula>IMAGE(
CASE( Design_Status__c,
&quot;Invalid&quot;, &quot;/img/samples/flag_red.gif&quot;,
&quot;De-Activated&quot;, &quot;/img/samples/flag_red.gif&quot;,
&quot;/img/samples/flag_green.gif&quot;),
&quot;Design Status&quot;)</formula>
        <label>Design Message</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Design_Status__c</fullName>
        <formula>TEXT(Design__r.Status__c)</formula>
        <label>Design Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Design__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Design</label>
        <referenceTo>Design__c</referenceTo>
        <relationshipLabel>Estimates</relationshipLabel>
        <relationshipName>Estimates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Electrical_Cost_wp__c</fullName>
        <inlineHelpText>Electrical costs (not auto-calculated into BOS ($/wp) field)</inlineHelpText>
        <label>Electrical Cost ($/wp)</label>
        <precision>7</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est__c</fullName>
        <label>Est #</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Estimate_Complete_Date__c</fullName>
        <label>Estimate Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimate_Complete_Month__c</fullName>
        <formula>Estimate_Complete_Date__c</formula>
        <label>Estimate Complete Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimate_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimate Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimate_Review_Complete_Date__c</fullName>
        <label>Estimate Review Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimate_Review_Due_Date__c</fullName>
        <label>Estimate Review Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimate_Review_Track_Date__c</fullName>
        <label>Estimate Review Track Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimate_Reviewer_Legacy__c</fullName>
        <label>Estimate Reviewer Legacy</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimate_Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Estimate Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Estimates1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Estimate_Tracking_Date__c</fullName>
        <label>Estimate Tracking Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_BOS__c</fullName>
        <description>Estimated BOS costs for this site.</description>
        <formula>Estimated_Basic_Plant_Roadmap__c  +  Estimated_Cost_modifiers__c  +  Estimated_Cost_adders__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated field (Roadmap + Modifiers + Adders)</inlineHelpText>
        <label>Estimated BOS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Basic_Plant_Roadmap__c</fullName>
        <description>Estimated basic plant roadmap costs.</description>
        <label>Estimated Basic Plant Roadmap</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Basic_Plant_w_Modifiers__c</fullName>
        <description>Estimated basic plant costs with modifiers.</description>
        <formula>Estimated_Basic_Plant_Roadmap__c  +  Estimated_Cost_modifiers__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated field (Roadmap + Modifiers)</inlineHelpText>
        <label>Estimated Basic Plant w/Modifiers</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Cost_adders__c</fullName>
        <description>Estimated cost adders for this site.</description>
        <label>Estimated Cost adders</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Cost_modifiers__c</fullName>
        <description>Estimated cost modifiers for this site.</description>
        <label>Estimated Cost modifiers</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_EPC_Cost__c</fullName>
        <description>Estimated EPC costs for this site.</description>
        <formula>Estimated_PV_Cost__c  +  Estimated_BOS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated field (PV + BOS costs)</inlineHelpText>
        <label>Estimated EPC Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_PV_Cost__c</fullName>
        <description>Site estimated PV cost.</description>
        <label>Estimated PV Cost</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimator_Legacy__c</fullName>
        <label>Estimator (Legacy)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Estimator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Estimates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Exclude_from_Reporting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude from Reporting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exclude_from_Table_of_Content__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude from Table of Content</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exempt_from_Estimate_Reports__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Exempt from Estimate Reports.</description>
        <label>Exempt from Prorated BOS Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FEL_Level__c</fullName>
        <label>FEL Level</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GCR__c</fullName>
        <label>GCR</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Kickoff_Meeting__c</fullName>
        <label>Kickoff Meeting</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Linked_to_PSR__c</fullName>
        <formula>IF (ISNULL(PSR__c), &quot;NO&quot;, &quot;YES&quot;)</formula>
        <label>Linked to PSR?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MW__c</fullName>
        <formula>IF( System_Size_MWp__c &gt;=500, &quot;7: 500-Above&quot;,
IF( System_Size_MWp__c &gt;=250, &quot;6: 250-500&quot;,
IF( System_Size_MWp__c &gt;=100, &quot;5: 100-250&quot;,
IF( System_Size_MWp__c &gt;=50, &quot;4: 50-100&quot;,
IF( System_Size_MWp__c &gt;=25, &quot;3: 25-50&quot;,
IF( System_Size_MWp__c &gt;=5, &quot;2: 5-25&quot;,&quot;1: 0-5&quot;)
)))))</formula>
        <label>MW</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Module_Type_2__c</fullName>
        <label>Module Type</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Module_Type__c</fullName>
        <label>Module Type</label>
        <picklist>
            <picklistValues>
                <fullName>Evergreen 180 - 190</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mixed Modules</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PowerLight 220</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sanyo 190 - 200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Serengeti 220</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Serengeti 228</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sharp 195</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SunPower 210</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SunPower 215</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SunPower 225</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SunPower 230</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SunPower 280</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SunPower 305</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SunPower 310</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SunPower 315</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SunPower 400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SunPower 415</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SunPower 420</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SunPower 425</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SunTech 175</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SunTech 260 - 270</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yingli 210</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mounting_System__c</fullName>
        <formula>PSR__r.Mounting_System__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mounting System</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Negotiated_Due_Date__c</fullName>
        <label>Negotiated Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>O_M_Cost_wp__c</fullName>
        <inlineHelpText>Includes O&amp;M Services, Warranty Reserve, PeGu, etc. (not auto-calculated into BOS ($/Wp) field)</inlineHelpText>
        <label>O&amp;M Cost ($/wp)</label>
        <precision>8</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Old_Estimator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Fill with Previous Estimator if Estimator get change.</description>
        <label>Old Estimator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Estimates3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <formula>RIGHT( Opportunity__r.Name, LEN( Opportunity__r.Name ) -7)</formula>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Estimates</relationshipLabel>
        <relationshipName>Estimates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_Due_Date__c</fullName>
        <label>Original Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PM_PPP_Review_Tracking_Date__c</fullName>
        <label>PM-PPP Review Tracking Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PM_PPP_Status__c</fullName>
        <label>PM-PPP Status</label>
        <picklist>
            <picklistValues>
                <fullName>Need Values</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PM_PPP_Tracking_Date__c</fullName>
        <label>PM-PPP Tracking Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PM_Review_BOS_wp__c</fullName>
        <label>PM Review BOS ($/wp)</label>
        <precision>7</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PM_Review_Date__c</fullName>
        <label>PM Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PSR_Comments__c</fullName>
        <formula>PSR__r.Costing_Comments__c</formula>
        <label>PSR Comments</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSR_ID__c</fullName>
        <formula>PSR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PSR ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSR_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PSR Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Estimates4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PSR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PSR</label>
        <referenceTo>PSR__c</referenceTo>
        <relationshipLabel>Estimates</relationshipLabel>
        <relationshipName>Estimates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PV__c</fullName>
        <formula>PV_wp__c *  System_Size_MWp__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PV</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PV_wp__c</fullName>
        <label>PV ($/wp)</label>
        <precision>7</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Performance_or_Payment_Bond__c</fullName>
        <formula>TEXT( PSR__r.Performance_or_Payment_Bond__c )</formula>
        <label>Performance or Payment Bond</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permit_Fee_Allowance__c</fullName>
        <formula>TEXT(PSR__r.Permit_Fee_Allowance__c)</formula>
        <label>Permit Fee Allowance</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_PM_Review_BOS_Variance_wp__c</fullName>
        <formula>BOS_wp__c -  PM_Review_BOS_wp__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Post PM Review BOS Variance ($/wp)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prevailing_Wage__c</fullName>
        <formula>TEXT(PSR__r.Prevailing_Wage__c)</formula>
        <label>Prevailing Wage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Book__c</fullName>
        <label>Price Book</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_PSR_Estimate__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Primary PSR Estimate?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <picklist>
            <picklistValues>
                <fullName>C1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elevated Tracker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Tilt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GFT-0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GFT-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GFT-20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GFT-25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GFT-30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mixed Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PowerGuard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RMR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T-0 V1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T-20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T-20 V2.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T-20 V2.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T-20 V2.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T-5</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Estimates2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Review__c</fullName>
        <label>Project Review</label>
        <picklist>
            <picklistValues>
                <fullName>PR0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PR1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PR2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PR3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PR4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Prorated_BOS__c</fullName>
        <formula>BOS_wp__c * System_Size_MWp__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prorated BOS (Hidden)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote_No__c</fullName>
        <formula>Quote_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Number__c</fullName>
        <label>Quote Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Name</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Estimates</relationshipLabel>
        <relationshipName>Estimates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reassigned_Estimate_BOS_W__c</fullName>
        <label>Reassigned Estimate BOS ($/W):</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reassigned_Promised_Date__c</fullName>
        <label>Reassigned Promised Date:</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reassigned_Requested_Due_Date__c</fullName>
        <label>Reassigned Requested Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reassigned_Start_Date__c</fullName>
        <label>Reassigned Start Date:</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reassigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reassigned To:</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Estimates5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reassigned_Total_BOS_Cost__c</fullName>
        <label>Reassigned Total BOS Cost:</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reassignment_Actual_Time_Spent_HR__c</fullName>
        <label>Reassignment Actual Time Spent (HR)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reassignment_Completed_Date__c</fullName>
        <label>Reassignment Completed Date:</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reassignment_Dates__c</fullName>
        <label>Reassignment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reassignment_Status__c</fullName>
        <formula>IF( AND(NOT(ISBLANK(  Reassigned_Start_Date__c  )), ISBLANK( Reassignment_Completed_Date__c)) , &quot;In Progress&quot;, 
 IF(NOT(ISBLANK( Reassignment_Completed_Date__c)), &quot;Completed&quot;,
 &quot;Not Started&quot;
    )
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reassignment Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refresh_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Refresh Count</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>TEXT( Opportunity__r.Region1__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_System_Size_AC__c</fullName>
        <formula>PSR__r.Requested_System_Size_AC__c</formula>
        <label>Requested System Size (AC)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Requested_System_Size_MWp__c</fullName>
        <label>Requested System Size (MWp)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rev__c</fullName>
        <label>Rev #</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Revision_Number__c</fullName>
        <label>Revision Number</label>
        <picklist>
            <picklistValues>
                <fullName>Original</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>